--- a/libraries/SD_SPI/utility/Sd2Card.cpp.org
+++ b/libraries/SD_SPI/utility/Sd2Card.cpp.org
@@ -18,24 +18,19 @@
  * <http://www.gnu.org/licenses/>.
  */
 #include <Arduino.h>
-#include "SPI.h"
 #include "Sd2Card.h"
 //------------------------------------------------------------------------------
 #ifndef SOFTWARE_SPI
 // functions for hardware SPI
 /** Send a byte to the card */
-inline static void spiSend(uint8_t b) {
-	// TODO:
-	  SPI.transfer(b);
-//  SPDR = b;
-//  while (!(SPSR & (1 << SPIF)));
+static void spiSend(uint8_t b) {
+  SPDR = b;
+  while (!(SPSR & (1 << SPIF)));
 }
 /** Receive a byte from the card */
-inline static uint8_t spiRec(void) {
-	// TODO:
-//  spiSend(0XFF);
-//  return SPDR;
-	  return SPI.transfer(0xff);
+static  uint8_t spiRec(void) {
+  spiSend(0XFF);
+  return SPDR;
 }
 #else  // SOFTWARE_SPI
 //------------------------------------------------------------------------------
@@ -152,12 +147,6 @@ void Sd2Card::chipSelectHigh(void) {
 }
 //------------------------------------------------------------------------------
 void Sd2Card::chipSelectLow(void) {
-//TODO:
-	  SPI.setClockDivider(spiClockRate_); //SPI_CLOCK_DIV4):
-
-	  SPI.setDataMode(SPI_MODE0);
-	  SPI.setBitOrder(MSBFIRST);
-
   digitalWrite(chipSelectPin_, LOW);
 }
 //------------------------------------------------------------------------------
@@ -244,12 +233,11 @@ uint8_t Sd2Card::init(uint8_t sckRateID, uint8_t chipSelectPin) {
   // clear double speed
   SPSR &= ~(1 << SPI2X);
 #endif  // SOFTWARE_SPI
-  setSckRate(SPI_CLOCK_DIV128);
 
   // must supply min of 74 clock cycles with CS high.
   for (uint8_t i = 0; i < 10; i++) spiSend(0XFF);
 
-  //chipSelectLow();
+  chipSelectLow();
 
   // command to go idle in SPI mode
   while ((status_ = cardCommand(CMD0, 0)) != R1_IDLE_STATE) {
@@ -468,7 +456,6 @@ uint8_t Sd2Card::setSckRate(uint8_t sckRateID) {
     error(SD_CARD_ERROR_SCK_RATE);
     return false;
   }
-  /*
   // see avr processor datasheet for SPI register bit definitions
   if ((sckRateID & 1) || sckRateID == 6) {
     SPSR &= ~(1 << SPI2X);
@@ -478,9 +465,6 @@ uint8_t Sd2Card::setSckRate(uint8_t sckRateID) {
   SPCR &= ~((1 <<SPR1) | (1 << SPR0));
   SPCR |= (sckRateID & 4 ? (1 << SPR1) : 0)
     | (sckRateID & 2 ? (1 << SPR0) : 0);
-  */
-  // TODO:
-  spiClockRate_ = sckRateID;
   return true;
 }
 //------------------------------------------------------------------------------
